# auto-register

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: qwen.yaml
scripts/: run.py
src/: __init__.py  cli.py
src/core/: __init__.py  browser.py  config_loader.py  engine.py  interfaces.py
src/providers/: __init__.py  mailtm_provider.py  onesecmail_provider.py  username_provider.py
src/sites/: __init__.py
src/sites/qwen/: __init__.py  qwen_oauth.py  qwen_site.py
src/utils/: __init__.py  logger.py  password.py  token_utils.py
src/writers/: __init__.py  env_writer.py  json_writer.py
